<resources>
    <string name="app_name">Raspberry Pi Checker</string>
    <string name="dialog_charging">Charging...</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="lbl_tv_cputemp">CPU Temp.:</string>
    <string name="lbl_tv_memtotal">Total RAM:</string>
    <string name="lbl_tv_memfree">Free RAM:</string>
    <string name="service_running">Running</string>
    <string name="service_not_running">Not running</string>
    <string name="lbl_check_minecraft_srv">Minecraft Server:</string>
    <string name="lbl_tv_memused">Used RAM:</string>
    <string name="menu_navdrawer_main">Main</string>
    <string name="menu_navdrawer_commandline">Command-line</string>
    <string name="btn_send_command">Send</string>
    <string name="title_activity_login">Login</string>
    <string name="lbl_tv_user_login">User:</string>
    <string name="lbl_tv_password_login">Password:</string>
    <string name="lbl_tv_host_login">Host:</string>
    <string name="lbl_tv_port_login">Port:</string>
    <string name="menu_navdrawer_others_title">Others</string>
    <string name="menu_navdrawer_others_configuration">Configuration</string>
    <string name="menu_navdrawer_others_logout">Logout</string>
    <string name="menu_navdrawer_file_explorer">File explorer</string>
    <string name="menu_toolbar_mainfragment_refresh">Refresh</string>
    <string name="lbl_tv_uptime">Uptime:</string>
    <string name="reconnected">Reconnected</string>
    <string name="error_cannot_reconnect">Cannot reconnect</string>
    <string name="error">Error</string>
    <string name="error_cannot_fetch_data">Cannot fetch data</string>
    <string name="try_reconnect">Try to reconnect</string>
    <string name="go_back_login">Go back to Login</string>
    <string name="error_cannot_connect">Cannot connect, try again?</string>
    <string name="error_connection_lost">Connection lost</string>
    <string name="skip">Skip</string>
    <string name="lbl_tv_active_network_interface">Interface:</string>
    <string name="lbl_tv_active_ip">IP:</string>
    <string name="lbl_tv_relativelayout_cpu">CPU</string>
    <string name="lbl_tv_relativelayout_ram">RAM</string>
    <string name="lbl_tv_relativelayout_network">NETWORK</string>
    <string name="lbl_tv_relativelayout_system">SYSTEM</string>
    <string name="lbl_tv_relativelayout_services">SERVICES</string>
    <string name="lbl_tv_cpumaxfreq">CPU Max. freq.:</string>
    <string name="lbl_tv_cpuminfreq">CPU Min. freq.:</string>
    <string name="lbl_tv_cpucurfreq">CPU Cur. freq.:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_confirm_exit">Do you want to close the application?</string>
    <string name="dialog_confirm_exit_title">Exit</string>
    <string name="error_not_available">N/A</string>
    <string name="str_days">Days</string>
    <string name="str_hours">Hours</string>
</resources>
