<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">
            <!--tools:context=".MainFragment">-->


            <RelativeLayout
                android:id="@+id/relativeLayoutCPU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lbl_tv_relativelayout_cpu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_relativelayout_cpu"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lbl_tv_cputemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/lbl_tv_relativelayout_cpu"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_cputemp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_cputemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_tv_cputemp"
                    android:layout_alignBottom="@+id/lbl_tv_cputemp"
                    android:layout_alignParentEnd="true"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/lbl_tv_cpumaxfreq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/lbl_tv_cputemp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_cpumaxfreq"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_cpumaxfreq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_tv_cpumaxfreq"
                    android:layout_alignBottom="@+id/lbl_tv_cpumaxfreq"
                    android:layout_alignParentEnd="true"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/lbl_tv_cpuminfreq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/lbl_tv_cpumaxfreq"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_cpuminfreq"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_cpuminfreq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_tv_cpuminfreq"
                    android:layout_alignBottom="@+id/lbl_tv_cpuminfreq"
                    android:layout_alignParentEnd="true"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/lbl_tv_cpucurfreq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/lbl_tv_cpuminfreq"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_cpucurfreq"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_cpucurfreq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_tv_cpucurfreq"
                    android:layout_alignBottom="@+id/lbl_tv_cpucurfreq"
                    android:layout_alignParentEnd="true"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutRAM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/relativeLayoutCPU"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/lbl_tv_relativelayout_ram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_relativelayout_ram"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lbl_tv_memtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/lbl_tv_relativelayout_ram"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_memtotal"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_memtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_tv_memtotal"
                    android:layout_alignBottom="@+id/lbl_tv_memtotal"
                    android:layout_alignParentEnd="true"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/lbl_tv_memfree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/lbl_tv_memtotal"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_memfree"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_memfree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_tv_memfree"
                    android:layout_alignBottom="@+id/lbl_tv_memfree"
                    android:layout_alignParentEnd="true"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/lbl_tv_memused"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/lbl_tv_memfree"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_memused"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_memused"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_tv_memused"
                    android:layout_alignBottom="@+id/lbl_tv_memused"
                    android:layout_alignParentEnd="true"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutNetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/relativeLayoutRAM"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/lbl_tv_relativelayout_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_relativelayout_network"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lbl_tv_active_network_interface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/lbl_tv_relativelayout_network"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_active_network_interface"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_active_network_interface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_tv_active_network_interface"
                    android:layout_alignBottom="@+id/lbl_tv_active_network_interface"
                    android:layout_alignParentEnd="true"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/lbl_tv_active_network_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/lbl_tv_active_network_interface"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_active_ip"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_active_network_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_tv_active_network_ip"
                    android:layout_alignBottom="@+id/lbl_tv_active_network_ip"
                    android:layout_alignParentEnd="true"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutNetwork"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/lbl_tv_relativelayout_system"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_relativelayout_system"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lbl_tv_uptime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/lbl_tv_relativelayout_system"
                    android:text="@string/lbl_tv_uptime"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_uptime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_tv_uptime"
                    android:layout_alignBottom="@+id/lbl_tv_uptime"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutSystem"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/lbl_tv_relativelayout_services"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_tv_relativelayout_services"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lbl_tv_check_minecraft_srv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/lbl_tv_relativelayout_services"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_check_minecraft_srv"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_check_minecraft_srv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_tv_check_minecraft_srv"
                    android:layout_alignBottom="@+id/lbl_tv_check_minecraft_srv"
                    android:layout_alignParentEnd="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
            </RelativeLayout>
            ¡
        </RelativeLayout>

    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>