<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.paurf3.raspberrypitools.activities.LoginActivity"
    tools:showIn="@layout/activity_login">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/lbl_tv_user_login"
                android:layout_alignParentStart="true"
                android:text="@string/lbl_tv_user_login"
                android:layout_row="1"
                android:layout_column="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_user_login"
                android:inputType="text"
                android:layout_toEndOf="@+id/lbl_tv_user_login"
                android:layout_alignBottom="@+id/lbl_tv_user_login"
                android:layout_alignParentTop="true"
                android:layout_row="1"
                android:layout_column="1"
                android:singleLine="true" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/lbl_tv_password_login"
                android:layout_below="@+id/lbl_tv_user_login"
                android:layout_alignParentStart="true"
                android:text="@string/lbl_tv_password_login"
                android:layout_row="1"
                android:layout_column="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_password_login"
                android:layout_below="@+id/et_user_login"
                android:layout_toEndOf="@+id/lbl_tv_password_login"
                android:layout_alignBottom="@+id/lbl_tv_password_login"
                android:layout_row="1"
                android:layout_column="2"
                android:singleLine="true" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/lbl_tv_host_login"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lbl_tv_password_login"
                android:layout_alignParentLeft="true"
                android:text="@string/lbl_tv_host_login"
                android:layout_row="0"
                android:layout_column="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_host_login"
                android:inputType="text"
                android:layout_toEndOf="@+id/lbl_tv_host_login"
                android:layout_below="@+id/lbl_tv_password_login"
                android:layout_above="@+id/et_port_login"
                android:layout_row="0"
                android:layout_column="1"
                android:singleLine="true" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/lbl_tv_port_login"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lbl_tv_host_login"
                android:layout_alignParentLeft="true"
                android:text="@string/lbl_tv_port_login"
                android:layout_row="0"
                android:layout_column="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_port_login"
                android:inputType="number"
                android:layout_alignTop="@+id/lbl_tv_port_login"
                android:layout_toEndOf="@+id/lbl_tv_port_login"
                android:layout_alignBottom="@+id/lbl_tv_port_login"
                android:layout_row="0"
                android:layout_column="1"
                android:singleLine="true" />
        </GridLayout>

    </GridLayout>

</LinearLayout>
